--- a/javaScript programação orientada a objetos/package.json
+++ b/javaScript programação orientada a objetos/package.json
@@ -1,3 +1,12 @@
 {
-  "description": ""
+  "name": "teste",
+  "version": "1.0.0",
+  "description": "",
+  "type":"module",
+  "main": "User.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
