--- a/node js api rest express mongodb/package.json
+++ b/node js api rest express mongodb/package.json
@@ -4,10 +4,22 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Rafael",
+  "license": "ISC",
+  "dependencies":{
+    "modulo-1": "^1.0.0",
+    "modulo-2": "^1.0.3",
+    "modulo-3": "^2.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "jest": "^27.2.1"
+  }
+   
 }
