--- a/node js api rest express mongodb/package.json
+++ b/node js api rest express mongodb/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "mongodb": "^6.5.0",
+    "mongoose": "^7.3.4",
     "nodemon": "^3.0.1"
   }
 }
