--- a/api-node-express-2-main/api-node-express-2-main/package.json
+++ b/api-node-express-2-main/api-node-express-2-main/package.json
@@ -12,6 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/js": "^9.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "globals": "^15.0.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
