--- a/api-node-express-2-main/api-node-express-2-main/package.json
+++ b/api-node-express-2-main/api-node-express-2-main/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.17.3",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "mongoose-autopopulate": "^1.1.0"
   }
 }
