--- a/ORM com Node.js desenvolvendo uma API com Sequelize e SQLite/package.json
+++ b/ORM com Node.js desenvolvendo uma API com Sequelize e SQLite/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "express": "4.18.2",
     "sequelize": "6.32.1",
-    "sequelize-cli": "6.6.1",
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
     "eslint": "8.46.0",
-    "nodemon": "3.0.1"
+    "nodemon": "3.0.1",
+    "sequelize-cli": "^6.6.2"
   }
 }
