--- a/ORM com Node.js desenvolvendo uma API com Sequelize e SQLite/package.json
+++ b/ORM com Node.js desenvolvendo uma API com Sequelize e SQLite/package.json
@@ -18,6 +18,6 @@
   "devDependencies": {
     "eslint": "8.46.0",
     "nodemon": "3.0.1",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "6.6.1"
   }
 }
